Fixed plus icon getting cropped, fixed agents page having issue in indication number of angents with state

--- a/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
@@ -1136,6 +1136,7 @@ button#confirm-pause-up42 {
 
 .add_link {
   padding: 0px 5px 0px 20px;
+  line-height: 16px;
 }
 
 .sub_tab_container_content {
